--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node.js, express, and mongodb",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "Edwin Kesuma",
   "license": "ISC",
