--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Learning node.js, express, and mongodb",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Edwin Kesuma",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.0.0",
     "express": "^4.21.2",
     "morgan": "^1.10.0"
   }
