connecting database with the app

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USER=edwin
-PASSWORD=12345
+DATABASE=mongodb+srv://edma:<PASSWORD>@cluster0.ophzwnm.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=edma12345
