--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node.js, express, and mongodb",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Edwin Kesuma",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.0.0",
     "express": "^4.21.2",
+    "mongoose": "^7.8.7",
     "morgan": "^1.10.0"
   }
 }
